--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <img src="./images//clouds.png" class="clouds" />
       <img src="./images/mario.gif" class="mario" />
       <img src="./images/pipe.png" class="pipe" />
+      <!-- Adiciona o botão de pulo -->
+      <button id="jumpButton" onclick="jump()">Jump</button>
     </div>
   </body>
 </html>
