--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
       <img src="./images//clouds.png" class="clouds" />
       <img src="./images/mario.gif" class="mario" />
       <img src="./images/pipe.png" class="pipe" />
-      <button id="jumpButton" class="jump-button" onclick="jump()">Jump</button>
+      <div class="jump-button-container">
+        <button id="jumpButton" class="jump-button" onclick="jump()">
+          Jump
+        </button>
+      </div>
     </div>
   </body>
 </html>
