Adicionado contador de pulo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <img src="./images/mario.gif" class="mario" />
       <img src="./images/pipe.png" class="pipe" />
       <div class="jump-button-container">
-        <!-- <button id="jumpButton" class="jump-button" onclick="jump()">Jump</button> -->
+        <button id="jumpButton" class="jump-button" onclick="jump()">
+          Jump
+        </button>
       </div>
       <!-- Adiciona um elemento para exibir o contador de pulos -->
       <div id="jumpCounter" class="jump-counter">Jumps: 0</div>
